# R1-RAG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: grpo_qwen_3b.yaml
r1_rag/: __init__.py
r1_rag/agent/: __init__.py  generation_manager.py
r1_rag/data/: __init__.py  gpt4o_annotator.py  processor.py  prompts.py
r1_rag/retriever/: __init__.py  indexer.py  server.py
r1_rag/reward/: __init__.py  config.py  dag_evaluator.py  semantic_scorer.py  structure_scorer.py
r1_rag/trainer/: __init__.py  main_grpo.py
scripts/: download_index.py  example_reward.py  prepare_data.py  train_grpo.sh
